--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,7 +150,7 @@ img.before {z-index: 0;}
 
 .legenda p {
     font-size: 12px;
-	margin-left: 1em;
+	margin-left: 13px;
     text-transform: uppercase;
 	transition-property: transform;
     transition-duration: 0.4s;
@@ -160,11 +160,10 @@ img.before {z-index: 0;}
 .legenda_icon {
 	position: absolute;
     display: block;
-    width: 0.8em;
+    width: 9px;
     height: 100%;
 	background-position: left center;
     background-repeat: no-repeat;
-    background-size: 65%;
 	background-image: url(icons/mouse_arrow.svg);
 	}
 
