--- a/stylesheet.css
+++ b/stylesheet.css
@@ -315,7 +315,7 @@ img.before {z-index: 0;}
 
 #menu #big_bicycle_link {background-size: 300%; background-position:78% 59%;}
 
-#menu #bungee_link {background-size: 200%; background-position: 90% 90%;}
+#menu #bungee_link {background-size: 240%; background-position: 80% 80%;}
 
 #menu #baloons_link {background-size: 160%; background-position: 70% 100%;}
 
@@ -323,8 +323,13 @@ img.before {z-index: 0;}
 
 #menu #punk_bride_link {background-size: 190%; background-position: center 21%;}
 
-#menu #puppet_link {background-size: 115%; background-position: center 20%;}
+#menu #puppet_link {background-size: 125%; background-position: center 20%;}
 
-#menu #train_link {background-size: 180%; background-position: 49% 20%;}
+#menu #train_link {background-size: 190%; background-position: 47% 20%;}
 
-#menu #beach_red_link {background-size: 160%; background-position: 50% 20%;}
+#menu #beach_red_link {background-size: 180%; background-position: 50% 20%;}
+
+#menu #shampoo_link {background-size: 110%;}
+
+#menu #super_link {background-size: 150%; background-position: 47% 0%;}
+
